<resources>
    <string name="progress_card_found">card loaded</string>
    <string name="progress_cards_found">cards loaded</string>
    <string name="website_url">mtg-search.com</string>
    <string name="logo">logo</string>
    <string name="list_menu_cards">Show card list</string>
    <string name="list_menu_facets">Show filters</string>
    <string name="list_menu_clear">Clear search</string>
    <string name="list_menu_search">Search</string>
    <string name="list_menu_help">Help !</string>
    <string name="list_menu_history">Recent search</string>
    <string name="list_menu_rules">Rules</string>
    <string name="list_menu_deck">Go back to deck</string>
    <string name="added_to_wishlist">%1$s added to your wishlist</string>
    <string name="removed_from_wishlist">%1$s removed from wishlist</string>
    <string name="added_to_deck">%1$s added to \'%2$s\' deck</string>
    <string name="already_in_deck">%1$s already in \'%2$s\' deck</string>
    <string name="removed_from_deck">%1$s removed from \'%2$s\' deck</string>
    <string name="detail_menu_oracle">Text</string>
    <string name="detail_menu_pictures">Gallery</string>
    <string name="detail_buy_ebay">Ebay</string>
    <string name="history_menu_clear">Clear searches</string>
    <string name="history_empty">No recent search</string>
    <string name="history_search_text">Keywords</string>
    <string name="history_alert_title">Clear recent search?</string>
    <string name="history_alert_description">
        All unchecked searches will be deleted.
    </string>
    <string name="history_check_text">
        Checked searches will be kept when clearing search.
    </string>
    <string name="history_alert_ok">Delete</string>
    <string name="history_alert_cancel">Cancel</string>
    <string name="search_hint">black lotus, draw, sacrifice…</string>
    <string name="failed_search">Oops, search encountered an error ! Please, check your data connection.</string>
    <string name="card_type">Type:</string>
    <string name="card_formats">Formats:</string>
    <string name="drawer_open">Go to search</string>
    <string name="drawer_close">Back to list</string>
    <string name="facet_ability">Ability</string>
    <string name="facet_artist">Artist</string>
    <string name="facet_color">Color</string>
    <string name="facet_dual_color">Two-color deck</string>
    <string name="facet_triple_color">Three-color deck</string>
    <string name="facet_quad_color">Four-color deck</string>
    <string name="facet_cmc">Converted Mana Cost</string>
    <string name="facet_devotion">Devotion</string>
    <string name="facet_format">Format</string>
    <string name="facet_land">Land</string>
    <string name="facet_power">Power</string>
    <string name="facet_rarity">Rarity</string>
    <string name="facet_set">Set</string>
    <string name="facet_toughness">Toughness</string>
    <string name="facet_type">Type</string>
    <string name="facet_more">More filters…</string>
    <string name="facet_price">Price</string>
    <string name="facet_min_price_paper">Price min. paper</string>
    <string name="facet_min_price_mtgo">Price min. MTGO</string>
    <string name="block_set">Block</string>
    <string name="facet_special">Special</string>
    <string name="layout_type">Layout</string>
    <string name="background_color" translatable="false">black</string>
    <string name="changelog_full_title">What\'s new?</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more…</string>
    <string name="wishlist_title">Wishlist</string>
    <string name="wishlist_title_number">Wishlist (%1$s)</string>
    <string name="wishlist_empty_text">Your wishlist is empty.\n\nAdd any card with the STAR button on search results.</string>
    <string name="deck_list_empty_text">Your deck list is empty.</string>
    <string name="decklist_title">Deck Manager</string>
    <string name="decklist_menu_import">Import</string>
    <string name="decklist_menu_delete">Del.</string>
    <string name="decklist_menu_create">Create</string>
    <string name="added_to_clipboard">Copied to clipboard !</string>
    <string name="decks_title">Decks</string>
    <string name="decks_title_number">Decks (%1$s)</string>
    <string name="decks_paste">Import deck from clipboard</string>
    <string name="quantity">Quantity</string>
    <string name="deckdetails_menu_add">Add</string>
    <string name="deckdetails_delete_title">Delete deck?</string>
    <string name="deckdetails_clone_title">Clone deck?</string>
    <string name="deckdetails_delete_ok">Delete</string>
    <string name="deckdetails_delete_cancel">Cancel</string>
    <string name="deckdetails_clone_ok">Clone</string>
    <string name="deckdetails_clone_cancel">Cancel</string>
    <string name="deckdetails_cards_empty">Deck is empty.\n\nAdd any card with the DECK button on search results.</string>
    <string name="stats_format">Format \"%1$s\"</string>
    <string name="stats_colors">Colors %1$s</string>
    <string name="stats_total_price">Deck price $%1$s</string>
    <string name="stats_sideboard_price">Sideboard price $%1$s</string>
    <string name="stats_mana_curve">Mana Curve</string>
    <string name="stats_color_distribution">Color distribution</string>
    <string name="stats_type_distribution">Type distribution</string>
    <string name="filter">Filter</string>
    <string name="organize_your_cards">Organize your cards</string>
    <string name="reset">Reset</string>
    <string name="search_empty_text">Search cards by typing keywords and by selecting filters.</string>
    <string name="search_last_extension"><![CDATA[<b>%2$s</b> cards<br><b>%1$s</b> is the newest set]]></string>
    <string name="deck_detail_cards_add">Add card using search</string>
    <string name="deck_detail_cards_add_history">Add card using history</string>
    <string name="deck_detail_cards_add_land">Add basic land</string>
    <string name="deck_detail_cards_camera_scan">Add card using camera</string>
    <string name="decks_add">Create empty deck</string>
    <string name="decks_import">Import deck from file</string>
    <string name="import_deck">Import deck</string>
    <string name="select_file">Select a file</string>
    <string name="deck_importer_text_why">You can import a deck from a file on your device.\n\nOtherwise, you can download one deck from one of theses website:</string>
    <string name="go_to_deck">Go to deck</string>
    <string name="downloading">Downloading…</string>
    <string name="go_back">Go back</string>
    <string name="bad_format">Unable to parse deck: unrecognized format</string>
    <string name="decklist_menu_export">Export</string>
    <string name="deck_exported">%1$s has been exported as: %2$s</string>
    <string name="snackbar_show">Browse</string>
    <string name="decklist_menu_refresh">Refresh</string>
    <string name="decklist_menu_duplicate">Clone</string>
    <string name="abilities">Abilities</string>
    <string name="deckdetails_refresh_title">Refresh deck data?</string>
    <string name="deckdetails_refresh_message">Decks are stored on device. This will synchronize and update data like card prices, formats validity.</string>
    <string name="deckdetails_refresh_ok">OK</string>
    <string name="deckdetails_refresh_cancel">CANCEL</string>
    <string name="importing_deck">Importing %1$s</string>
    <string name="refreshing">Refreshing…</string>
    <string name="deck_tab_cards">Deck (%1$s)</string>
    <string name="deck_tab_sideboard">Side (%1$s)</string>
    <string name="deck_tab_commander">Commander (%1$s)</string>
    <string name="deck_tab_maybeboard">Swap (%1$s)</string>
    <string name="deck_tab_stats">Stats</string>
    <string name="deck_tab_hand">Starting hand</string>
    <string name="loading">Searching…</string>
    <string name="deck_detail_cards_not_imported_text">You should add manually theses cards:</string>
    <string name="deck_detail_cards_not_imported_title">Clear this message?</string>
    <string name="deck_detail_cards_not_imported_ok">Clear</string>
    <string name="deck_detail_cards_not_imported_cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="ocr_continue_scan">Continue scan?</string>
    <string name="deck_detail_ruling"><![CDATA[%1$s…<br><br>Tap to see %2$s more ruling(s)]]></string>
    <string name="ocr_hint">Place card under camera, at least card title and type</string>
    <string name="gallery_mode">Gallery mode</string>
    <string name="add_card_to_deck">Add this card to deck:</string>
    <string name="close">Close</string>
    <string name="mult_deck">Deck</string>
    <string name="mult_sideboard">Side</string>
    <string name="mult_commander">Commander</string>
    <string name="mult_maybeboard">Swap</string>
    <string name="rules_empty_text">No rules found, check your internet connection and restart the application</string>
    <string name="rules_title">Rules</string>
    <string name="top">Top</string>
    <string name="back">Back</string>
    <string name="long_press_deck_editor">Long press to add to your deck</string>
    <string name="long_press_wishlist">Long press to add to your wishlist</string>
    <string name="rules_search_hint">Type keywords</string>
    <string name="select_format">No format</string>
    <string name="validation_missing_cards">%1$s missing cards (min %2$s)</string>
    <string name="validation_specific_cards">deck must have exactly %1$s cards</string>
    <string name="validation_bad_format">%1$s is not valid in %2$s</string>
    <string name="validation_max_occurrence">%1$s is limited to %2$s</string>
    <string name="card_type_land">Lands (%1$s)</string>
    <string name="card_type_creature">Creatures (%1$s)</string>
    <string name="card_type_instant">Spells (%1$s)</string>
    <string name="card_type_artifact">Artifacts (%1$s)</string>
    <string name="card_type_planeswalker">Planeswalkers (%1$s)</string>
    <string name="card_type_enchantment">Enchantments (%1$s)</string>
    <string name="card_type_other">Others (%1$s)</string>
    <string name="color_black">Black</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <string name="color_red">Red</string>
    <string name="color_white">White</string>
    <string name="creature">Creature</string>
    <string name="land">Land</string>
    <string name="instant_sorcery">Spells</string>
    <string name="other">Other</string>
    <string name="wishlist_menu_export">Export</string>
    <string name="wishlist_menu_import">Import</string>
    <string name="wishlist_import_title">Import wishlist from file ?</string>
    <string name="wishlist_import_message">This will replace your current wishlist.</string>
    <string name="wishlist_import_ok">ok</string>
    <string name="wishlist_import_cancel">cancel</string>
    <string name="paste_from_clipboard">Paste from clipboard</string>
    <string name="paste_import">Import</string>
    <string name="paste_clear">Clear</string>
</resources>