<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/clear_tab"
        android:icon="@drawable/delete"
        app:showAsAction="always"
        android:title="@string/list_menu_clear" />

    <item
        android:id="@+id/history_tab"
        android:icon="@drawable/clock"
        app:showAsAction="always"
        android:title="@string/list_menu_history" />

    <item
        android:id="@+id/help_tab"
        android:icon="@drawable/info"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/list_menu_help" />

    <item
        android:id="@+id/changelog_tab"
        app:showAsAction="never"
        android:title="@string/changelog_title" />

</menu>