<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/decks_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/decks_empty_text"
            style="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/deck_list_empty_text" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/decks_floating_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            app:menu_colorNormal="@color/colorAccent"
            app:menu_colorPressed="@color/colorAccent"
            app:menu_labels_colorNormal="@color/colorPrimary"
            app:menu_labels_colorPressed="@color/colorPrimary">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/decks_fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_white_24dp"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimary"
                app:fab_label="@string/decks_add"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/decks_fab_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_note_add_white_24dp"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimary"
                app:fab_label="@string/decks_import"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/decks_fab_paste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_content_paste_white_24dp"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimary"
                app:fab_label="@string/decks_paste"
                app:fab_size="mini" />

        </com.github.clans.fab.FloatingActionMenu>
    </RelativeLayout>
</LinearLayout>
